# Amble

./: .gitignore  .gitmodules  Justfile  Makefile  README.md  amble.sqlite  makefile
core/: Cargo.toml
core/benches/: end_to_end.rs
core/src/: lib.rs  main.rs
core/src/air/: air.rs  db_io.rs  mod.rs
core/src/db/: amble_db.rs  extraction.rs  mod.rs  schema.rs
core/src/matching/: fold.rs  mod.rs  value_matcher.rs
core/src/parsing/: lexer.rs  mod.rs  parser.rs
core/src/rendering/: mod.rs
core/test/org/: lots_of_categories.org
lua/: test.lua
lua/amble/: amble_ffi.lua  init.lua
lua/telescope/_extensions/: amble.lua
nvim/: init.lua
nvim/lua/: amble.lua  amble_ffi.lua
test/org-files/: mapreduce.org
