[package]
name = "amble"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.0", features = ["bundled"] }
anyhow = "1.0"
bumpalo = "3.9"

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "end_to_end"
harness = false

[lib]
name = "amble"
crate-type = ["cdylib", "rlib"]

[profile.dev]
debug = true
debuginfo-level = 1
jemalloc = false

[profile.release]
debug = true
